--- a/index.html
+++ b/index.html
@@ -217,30 +217,16 @@
             <div class="navigation default">
                 <ul>
                     <li>
-                        <a href="/gioi-thieu">Giới thiệu</a>
-                        <ul class="sub-menu">
-                            <li>
-                                <a href="/gioi-thieu#about-general">Giới thiệu chung</a>
-                            </li>
-                            <li>
-                                <a href="/gioi-thieu#mission">Sứ mệnh tầm nhìn</a>
-                            </li>
-                            <li>
-                                <a href="/gioi-thieu#history">Lịch sử hình thành</a>
-                            </li>
-                            <li>
-                                <a href="/gioi-thieu#maps-about">Sơ đồ tổ chức</a>
-                            </li>
-                            <li>
-                                <a href="/gioi-thieu#company-members">Công ty thành viên</a>
-                            </li>
-                            <li>
-                                <a href="/gioi-thieu#news-home">Văn hóa doanh nghiệp</a>
-                            </li>
-                        </ul>
+                        <a href="">Trang chủ</a>
                     </li>
                     <li>
-                        <a href="/san-pham">Sản phẩm</a>
+                        <a href="">Giới thiệu</a>
+                    </li>
+                    <li>
+                        <a href="">Sản phẩm</a>
+                    </li>
+                    <li>
+                        <a href="">Dịch vụ</a>
                         <ul class="sub-menu">
                             <li>
                                 <a href="" target="_blank">Thép xây dựng</a>
@@ -266,7 +252,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="/chat-luong-hoa-phat">Chất lượng hòa phát</a>
+                        <a href="">Tin tức</a>
                         <ul class="sub-menu">
                             <li>
                                 <a href="/chat-luong-hoa-phat#scrool-certificate">Chứng chỉ chất lượng</a>
@@ -280,47 +266,10 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="/quan-he-co-dong/cong-bo-thong-tin">Quan hệ cổ đông</a>
-                        <ul class="sub-menu">
-                            <li>
-                                <a href="/quan-he-co-dong/cong-bo-thong-tin">Công bố thông tin</a>
-                            </li>
-                            <li>
-                                <a href="/quan-he-co-dong/bao-cao-tai-chinh">Báo cáo tài chính</a>
-                            </li>
-                            <li>
-                                <a href="/quan-he-co-dong/bao-cao-thuong-nien">Báo cáo thường niên</a>
-                            </li>
-                            <li>
-                                <a href="/quan-he-co-dong/dai-hoi-co-dong">Đại hội cổ đông</a>
-                            </li>
-                            <li>
-                                <a href="/quan-he-co-dong/van-ban-phap-ly">Văn bản pháp lý</a>
-                            </li>
-                            <li>
-                                <a href="/quan-he-co-dong/cao-bach">Văn bản cáo bạch</a>
-                            </li>
-                            <li>
-                                <a href="/quan-he-co-dong/tro-giup-co-dong">Trợ giúp cổ đông</a>
-                            </li>
-                        </ul>
+                        <a href="">Video</a>
                     </li>
                     <li>
-                        <a href="tintuc.html">Tin tức</a>
-                        <ul class="sub-menu">
-                            <li>
-                                <a href="https://www.hoaphat.com.vn/tin-tuc/tin-tuc-tap-doan">Tin tức tập đoàn</a>
-                            </li>
-                            <li>
-                                <a href="/tin-tuc/bao-chi-viet-ve-hoa-phat">Báo chí viết về Hòa Phát</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="/tuyen-dung"> Tuyển dụng</a>
-                    </li>
-                    <li>
-                        <a href="/lien-he">Liên hệ</a>
+                        <a href="">Liên hệ</a>
                     </li>
                 </ul>
             </div>
@@ -338,48 +287,34 @@
             <div class="navigation default">
                 <ul>
                     <li>
-                        <a href="/gioi-thieu">Giới thiệu</a>
-                        <ul class="sub-menu">
-                            <li>
-                                <a href="/gioi-thieu#about-general">Giới thiệu chung</a>
-                            </li>
-                            <li>
-                                <a href="/gioi-thieu#mission">Sứ mệnh tầm nhìn</a>
-                            </li>
-                            <li>
-                                <a href="/gioi-thieu#history">Lịch sử hình thành</a>
-                            </li>
-                            <li>
-                                <a href="/gioi-thieu#maps-about">Sơ đồ tổ chức</a>
-                            </li>
-                            <li>
-                                <a href="/gioi-thieu#company-members">Công ty thành viên</a>
-                            </li>
-                            <li>
-                                <a href="/gioi-thieu#news-home">Văn hóa doanh nghiệp</a>
-                            </li>
-                        </ul>
+                        <a href="index.html">Trang chủ</a>
                     </li>
                     <li>
-                        <a href="/san-pham">Sản phẩm</a>
+                        <a href="">Giới thiệu</a>
+                    </li>
+                    <li>
+                        <a href="">Sản phẩm</a>
+                    </li>
+                    <li>
+                        <a href="">Dịch vụ</a>
                         <ul class="sub-menu">
                             <li>
-                                <a href="https://thep.hoaphat.com.vn" target="_blank">Thép xây dựng</a>
+                                <a href="" target="_blank">Thép xây dựng</a>
                             </li>
                             <li>
-                                <a href="https://ongthep.hoaphat.com.vn/" target="_blank">Ống thép</a>
+                                <a href="" target="_blank">Ống thép</a>
                             </li>
                             <li>
-                                <a href="https://ton.hoaphat.com.vn/" target="_blank">Tôn mạ màu - mạ kẽm</a>
+                                <a href="" target="_blank">Tôn mạ màu - mạ kẽm</a>
                             </li>
                             <li>
-                                <a href="https://dienlanh.hoaphat.com.vn/" target="_blank">Điện máy gia dụng</a>
+                                <a href="" target="_blank">Điện máy gia dụng</a>
                             </li>
                             <li>
-                                <a href="http://thietbi.hoaphat.com.vn/" target="_blank">Chế tạo kim loại</a>
+                                <a href="" target="_blank">Chế tạo kim loại</a>
                             </li>
                             <li>
-                                <a href="http://mandaringarden2.vn/" target="_blank">Bất động sản</a>
+                                <a href="" target="_blank">Bất động sản</a>
                             </li>
                             <li>
                                 <a href="" target="_blank">Nông nghiệp</a>
@@ -387,7 +322,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="/chat-luong-hoa-phat">Chất lượng hòa phát</a>
+                        <a href="">Tin tức</a>
                         <ul class="sub-menu">
                             <li>
                                 <a href="/chat-luong-hoa-phat#scrool-certificate">Chứng chỉ chất lượng</a>
@@ -401,47 +336,10 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="/quan-he-co-dong/cong-bo-thong-tin">Quan hệ cổ đông</a>
-                        <ul class="sub-menu">
-                            <li>
-                                <a href="/quan-he-co-dong/cong-bo-thong-tin">Công bố thông tin</a>
-                            </li>
-                            <li>
-                                <a href="/quan-he-co-dong/bao-cao-tai-chinh">Báo cáo tài chính</a>
-                            </li>
-                            <li>
-                                <a href="/quan-he-co-dong/bao-cao-thuong-nien">Báo cáo thường niên</a>
-                            </li>
-                            <li>
-                                <a href="/quan-he-co-dong/dai-hoi-co-dong">Đại hội cổ đông</a>
-                            </li>
-                            <li>
-                                <a href="/quan-he-co-dong/van-ban-phap-ly">Văn bản pháp lý</a>
-                            </li>
-                            <li>
-                                <a href="/quan-he-co-dong/cao-bach">Văn bản cáo bạch</a>
-                            </li>
-                            <li>
-                                <a href="/quan-he-co-dong/tro-giup-co-dong">Trợ giúp cổ đông</a>
-                            </li>
-                        </ul>
+                        <a href="">Video</a>
                     </li>
                     <li>
-                        <a href="/tin-tuc/tin-tuc-tap-doan">Tin tức</a>
-                        <ul class="sub-menu">
-                            <li>
-                                <a href="https://www.hoaphat.com.vn/tin-tuc/tin-tuc-tap-doan">Tin tức tập đoàn</a>
-                            </li>
-                            <li>
-                                <a href="/tin-tuc/bao-chi-viet-ve-hoa-phat">Báo chí viết về Hòa Phát</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="/tuyen-dung"> Tuyển dụng</a>
-                    </li>
-                    <li>
-                        <a href="/lien-he">Liên hệ</a>
+                        <a href="">Liên hệ</a>
                     </li>
                 </ul>
             </div>
@@ -1512,10 +1410,10 @@
     </ul>
 </div>
 <!-- The Modal -->
-<div id="myModal" class="modal">
+<div id="myModal" class="modal close-full">
     <!-- Modal content -->
     <div class="modal-content">
-        <span class="close">&times;</span>
+        <span class="close close-full">&times;</span>
         <p>Some text in the Modal..</p>
     </div>
 
@@ -1621,12 +1519,12 @@
     $(window).on('load', function () {
         $('#page').fadeOut().remove();
         setTimeout(function () {
-            $('#myModal').fadeIn();
-        }, 10000);
+            $('#myModal').slideToggle();
+        }, 1000);
     });
 
-    $('.close').click(function () {
-        $('#myModal').fadeOut();
+    $('.close-full').click(function () {
+        $('#myModal').slideToggle();
     });
 
     $(document).ready(function () {
