--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
 </head>
 <body>
 <div id="page">
@@ -252,7 +253,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="">Tin tức</a>
+                        <a href="tintuc.html">Tin tức</a>
                         <ul class="sub-menu">
                             <li>
                                 <a href="chitiet.html">Chứng chỉ chất lượng</a>
@@ -1096,6 +1097,82 @@
         </div>
     </div>
 </div>
+<div id="partner" class="default">
+    <div class="wrap">
+        <div class="title-news-event"><a href="" title="">Đối tác phát triển</a></div>
+        <div class="clear"></div>
+        <div class="intro-cat-home">
+            <div style="text-align: center;">
+                <span>
+                    VISI hiện đang là đại diện độc quyền của hơn 100&nbsp;hãng phần mềm &amp; thiết bị&nbsp;hàng đầu trên thế giới,
+                    cung cấp các giải pháp phần mềm cấp cao CAD/CAM/CAE/PLM/CNC, thiết bị công nghiệp, dịch vụ đào tạo và chuyển giao công nghệ,
+                    dịch vụ chạy mô phỏng,...
+                </span>
+            </div>
+        </div>
+        <div class="c10"></div>
+        <div class="news-home pos-re">
+            <div class="owl-carousel owl-theme">
+                <div class="item">
+                    <div class="item-partner item-hvr">
+                        <div class="img-hvr">
+                            <a href="#"><img src="http://upviet.com.vn/uploaded/doi-tac/doi-tac/ALTAIR.png" width="100%" alt="Altair"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-partner item-hvr">
+                        <div class="img-hvr">
+                            <a href="#"><img src="http://upviet.com.vn/uploaded/doi-tac/doi-tac/sigma.png" width="100%" alt="Altair"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-partner item-hvr">
+                        <div class="img-hvr">
+                            <a href="#"><img src="http://upviet.com.vn/uploaded/doi-tac/doi-tac/ALTAIR.png" width="100%" alt="Altair"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-partner item-hvr">
+                        <div class="img-hvr">
+                            <a href="#"><img src="http://upviet.com.vn/uploaded/doi-tac/doi-tac/sigma.png" width="100%" alt="Altair"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-partner item-hvr">
+                        <div class="img-hvr">
+                            <a href="#"><img src="http://upviet.com.vn/uploaded/doi-tac/doi-tac/ALTAIR.png" width="100%" alt="Altair"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-partner item-hvr">
+                        <div class="img-hvr">
+                            <a href="#"><img src="http://upviet.com.vn/uploaded/doi-tac/doi-tac/sigma.png" width="100%" alt="Altair"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-partner item-hvr">
+                        <div class="img-hvr">
+                            <a href="#"><img src="http://upviet.com.vn/uploaded/doi-tac/doi-tac/ALTAIR.png" width="100%" alt="Altair"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="item-partner item-hvr">
+                        <div class="img-hvr">
+                            <a href="#"><img src="http://upviet.com.vn/uploaded/doi-tac/doi-tac/sigma.png" width="100%" alt="Altair"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div id="footer" class="default">
     <div class="background">
         <div class="wrap">
@@ -1529,6 +1606,27 @@
     });
 
     $(document).ready(function () {
+        $('.owl-carousel').owlCarousel({
+            loop: true,
+            margin: 10,
+            nav: true,
+            dots: false,
+            autoplay:true,
+            autoplayTimeout:1000,
+            autoplayHoverPause:true,
+            responsive:{
+                0:{
+                    items:1
+                },
+                600:{
+                    items:3
+                },
+                1000:{
+                    items:5
+                }
+            }
+        });
+
         $(window).scroll(function () {
             var aTop = $('.header-fix').height();
             if ($(this).scrollTop() >= aTop) {
@@ -1622,6 +1720,7 @@
     });
 </script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 <script>
     AOS.init();
 </script>
