--- a/tintuc.html
+++ b/tintuc.html
@@ -211,7 +211,7 @@
             <div class="navigation default">
                 <ul>
                     <li>
-                        <a href="">Trang chủ</a>
+                        <a href="index.html">Trang chủ</a>
                     </li>
                     <li>
                         <a href="">Giới thiệu</a>
