--- a/index.html
+++ b/index.html
@@ -221,25 +221,10 @@
                             <a href="">Dịch vụ</a>
                             <ul class="sub-menu">
                                 <li>
-                                    <a href="" target="_blank">Thép xây dựng</a>
+                                    <a href="" target="_blank">Đào tạo và chuyển giao công nghệ</a>
                                 </li>
                                 <li>
-                                    <a href="" target="_blank">Ống thép</a>
-                                </li>
-                                <li>
-                                    <a href="" target="_blank">Tôn mạ màu - mạ kẽm</a>
-                                </li>
-                                <li>
-                                    <a href="" target="_blank">Điện máy gia dụng</a>
-                                </li>
-                                <li>
-                                    <a href="" target="_blank">Chế tạo kim loại</a>
-                                </li>
-                                <li>
-                                    <a href="" target="_blank">Bất động sản</a>
-                                </li>
-                                <li>
-                                    <a href="" target="_blank">Nông nghiệp</a>
+                                    <a href="" target="_blank">Tư vấn và phát triển sản phẩm</a>
                                 </li>
                             </ul>
                         </li>
@@ -247,13 +232,10 @@
                             <a href="">Tin tức</a>
                             <ul class="sub-menu">
                                 <li>
-                                    <a href="chitiet.html">Chứng chỉ chất lượng</a>
+                                    <a href="chitiet.html">Tin tức công nghệ</a>
                                 </li>
                                 <li>
-                                    <a href="chitiet.html">Công nghệ</a>
-                                </li>
-                                <li>
-                                    <a href="chitiet.html">Giải thưởng</a>
+                                    <a href="chitiet.html">Sự kiện</a>
                                 </li>
                             </ul>
                         </li>
@@ -291,7 +273,7 @@
                             <a href="">Dịch vụ</a>
                             <ul class="sub-menu">
                                 <li>
-                                    <a href="" target="_blank">Thép xây dựng</a>
+                                    <a href="" target="_blank">Thép xây dựng 22</a>
                                 </li>
                                 <li>
                                     <a href="" target="_blank">Ống thép</a>
@@ -627,30 +609,24 @@
                                 </div>
                             </div>
                             <div class="owl-item button2">
-                                <div class="item"><a target="_blank" href="">Thép xây dựng</a>
+                                <div class="item"><a target="_blank" href="">Giới thiệu công ty</a>
                                 </div>
                             </div>
                             <div class="owl-item button3">
-                                <div class="item"><a target="_blank" href="">Ống thép</a>
+                                <div class="item"><a target="_blank" href="">Tại sao chọn chúng tôi</a>
                                 </div>
                             </div>
                             <div class="owl-item button4">
-                                <div class="item"><a target="_blank" href="">Tôn mạ</a></div>
+                                <div class="item"><a target="_blank" href="">Sản phẩm</a></div>
                             </div>
                             <div class="owl-item button5">
-                                <div class="item"><a target="_blank" href="">Chế tạo
-                                kim loại</a></div>
+                                <div class="item"><a target="_blank" href="">Sự kiện</a></div>
                             </div>
                             <div class="owl-item button6">
-                                <div class="item"><a target="_blank" href="">Điện máy gia
-                                dụng</a></div>
+                                <div class="item"><a target="_blank" href="">Tin tức công nghệ</a></div>
                             </div>
                             <div class="owl-item button7">
-                                <div class="item"><a target="_blank" href="">Nông nghiệp</a></div>
-                            </div>
-                            <div class="owl-item button8">
-                                <div class="item"><a target="_blank" href="">Bất động sản</a>
-                                </div>
+                                <div class="item"><a target="_blank" href="">Khách hàng</a></div>
                             </div>
                         </div>
                     </div>
