--- a/index.html
+++ b/index.html
@@ -1035,6 +1035,82 @@
             </div>
         </div>
     </div>
+    <div id="partner" class="default">
+        <div class="wrap">
+            <div class="title-news-event"><a href="" title="">Đối tác phát triển</a></div>
+            <div class="clear"></div>
+            <div class="intro-cat-home">
+                <div style="text-align: center;">
+                    <span>
+                    VISI hiện đang là đại diện độc quyền của hơn 100&nbsp;hãng phần mềm &amp; thiết bị&nbsp;hàng đầu trên thế giới,
+                    cung cấp các giải pháp phần mềm cấp cao CAD/CAM/CAE/PLM/CNC, thiết bị công nghiệp, dịch vụ đào tạo và chuyển giao công nghệ,
+                    dịch vụ chạy mô phỏng,...
+                </span>
+                </div>
+            </div>
+            <div class="c10"></div>
+            <div class="news-home pos-re">
+                <div class="owl-carousel owl-theme">
+                    <div class="item">
+                        <div class="item-partner item-hvr">
+                            <div class="img-hvr">
+                                <a href="#"><img src="http://upviet.com.vn/uploaded/doi-tac/doi-tac/ALTAIR.png" width="100%" alt="Altair"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item-partner item-hvr">
+                            <div class="img-hvr">
+                                <a href="#"><img src="http://upviet.com.vn/uploaded/doi-tac/doi-tac/sigma.png" width="100%" alt="Altair"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item-partner item-hvr">
+                            <div class="img-hvr">
+                                <a href="#"><img src="http://upviet.com.vn/uploaded/doi-tac/doi-tac/ALTAIR.png" width="100%" alt="Altair"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item-partner item-hvr">
+                            <div class="img-hvr">
+                                <a href="#"><img src="http://upviet.com.vn/uploaded/doi-tac/doi-tac/sigma.png" width="100%" alt="Altair"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item-partner item-hvr">
+                            <div class="img-hvr">
+                                <a href="#"><img src="http://upviet.com.vn/uploaded/doi-tac/doi-tac/ALTAIR.png" width="100%" alt="Altair"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item-partner item-hvr">
+                            <div class="img-hvr">
+                                <a href="#"><img src="http://upviet.com.vn/uploaded/doi-tac/doi-tac/sigma.png" width="100%" alt="Altair"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item-partner item-hvr">
+                            <div class="img-hvr">
+                                <a href="#"><img src="http://upviet.com.vn/uploaded/doi-tac/doi-tac/ALTAIR.png" width="100%" alt="Altair"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item-partner item-hvr">
+                            <div class="img-hvr">
+                                <a href="#"><img src="http://upviet.com.vn/uploaded/doi-tac/doi-tac/sigma.png" width="100%" alt="Altair"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div id="footer" class="default">
         <div class="background">
             <div class="wrap">
