--- a/index.html
+++ b/index.html
@@ -991,11 +991,10 @@
             <div class="clear"></div>
             <div class="intro-cat-home">
                 <div style="text-align: center;">
-                    <span>
-                    VISI hiện đang là đại diện độc quyền của hơn 100&nbsp;hãng phần mềm &amp; thiết bị&nbsp;hàng đầu trên thế giới,
-                    cung cấp các giải pháp phần mềm cấp cao CAD/CAM/CAE/PLM/CNC, thiết bị công nghiệp, dịch vụ đào tạo và chuyển giao công nghệ,
-                    dịch vụ chạy mô phỏng,...
-                </span>
+                    <h3>
+                        VISI hiện đang là đại diện độc quyền của hơn 100&nbsp;hãng phần mềm &amp; thiết bị&nbsp;hàng đầu trên thế giới, cung cấp các giải pháp phần mềm cấp cao CAD/CAM/CAE/PLM/CNC, thiết bị công nghiệp, dịch vụ đào tạo và chuyển giao công nghệ, dịch vụ chạy mô
+                        phỏng,...
+                    </h3>
                 </div>
             </div>
             <div class="c10"></div>
@@ -1011,42 +1010,42 @@
                     <div class="item">
                         <div class="item-partner item-hvr">
                             <div class="img-hvr">
-                                <a href="#"><img src="/images/partner/1577330526741-1560761930178-1.png" width="100%" alt="Logo Viettel Aerospace Institute"></a>
+                                <img src="/images/partner/1577330526741-1560761930178-1.png" width="100%" alt="Logo Viettel Aerospace Institute">
                             </div>
                         </div>
                     </div>
                     <div class="item">
                         <div class="item-partner item-hvr">
                             <div class="img-hvr">
-                                <a href="#"><img src="/images/partner/Logo_MTA_new.png" width="100%" alt="Logo MTA"></a>
+                                <img src="/images/partner/Logo_MTA_new.png" width="100%" alt="Logo MTA">
                             </div>
                         </div>
                     </div>
                     <div class="item">
                         <div class="item-partner item-hvr">
                             <div class="img-hvr">
-                                <a href="#"><img src="/images/partner/logo.png" width="100%" alt="Logo Elentec"></a>
+                                <img src="/images/partner/logo.png" width="100%" alt="Logo Elentec">
                             </div>
                         </div>
                     </div>
                     <div class="item">
                         <div class="item-partner item-hvr">
                             <div class="img-hvr">
-                                <a href="#"><img src="/images/partner/logo@2x.png" width="100%" alt="Logo FOMECO"></a>
+                                <img src="/images/partner/logo@2x.png" width="100%" alt="Logo FOMECO">
                             </div>
                         </div>
                     </div>
                     <div class="item">
                         <div class="item-partner item-hvr">
                             <div class="img-hvr">
-                                <a href="#"><img src="/images/partner/M1.png" width="100%" alt="Logo M1"></a>
+                                <img src="/images/partner/M1.png" width="100%" alt="Logo M1">
                             </div>
                         </div>
                     </div>
                     <div class="item">
                         <div class="item-partner item-hvr">
                             <div class="img-hvr">
-                                <a href="#"><img src="/images/partner/m3.jpg" width="100%" alt="Logo M3"></a>
+                                <img src="/images/partner/m3.jpg" width="100%" alt="Logo M3">
                             </div>
                         </div>
                     </div>
@@ -1484,8 +1483,8 @@
             margin: 10,
             nav: false,
             dots: false,
-            autoplay: false,
-            autoplayTimeout: 5000,
+            autoplay: true,
+            autoplayTimeout: 3400,
             autoplayHoverPause: true,
             responsive: {
                 0: {
