handle icon & link

--- a/index.html
+++ b/index.html
@@ -1340,18 +1340,22 @@
                 <ul class="mfb-component__list">
                     <li>
                         <a href="#" class="mfb-component__button--child">
-                            <i class="fa fa-github"></i>
+                            <svg fill="#0577a3" height="512" viewBox="0 0 32 32" width="512" xmlns="http://www.w3.org/2000/svg"><g id="_35_Up" data-name="35 Up"><path d="m4.1934 18.3809 11-14.999a1.0371 1.0371 0 0 1 1.6133 0l11 14.999a1.01 1.01 0 0 1 -1.2314 1.4971l-10.5753-4.9688-10.5752 4.9687a1.0078 1.0078 0 0 1 -1.2314-1.497zm23.21 3.543-10.9044-4.8116a.99.99 0 0 0 -.8008-.002l-11.0957 4.8116a.9984.9984 0 0 0 -.6025.917v5.1885a1.0151 1.0151 0 0 0 1.3945.9189l10.7891-4.6377 10.41 4.6328a1.01 1.01 0 0 0 1.4064-.9141v-5.1884a.9991.9991 0 0 0 -.5967-.9151z"/></g></svg>
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="mfb-component__button--child">
-                            <i class="fa fa-facebook"></i>
+                        <a href="https://www.facebook.com/visi.com.vn/inbox" target="_blank" class="mfb-component__button--child">
+                            <svg fill="#0577a3" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><g id="Layer_2" data-name="Layer 2"><path d="m27.67 3.13h-23.34a3.34 3.34 0 0 0 -3.33 3.33v15.33a3.34 3.34 0 0 0 3.33 3.34h2.67l1.92 3a1.48 1.48 0 0 0 1.27.7 1.52 1.52 0 0 0 1.28-.73l1.82-3h14.38a3.34 3.34 0 0 0 3.33-3.31v-15.33a3.34 3.34 0 0 0 -3.33-3.33zm-6.67 9h-10a1 1 0 0 1 -1-1 1 1 0 0 1 1-1h10a1 1 0 0 1 1 1 1 1 0 0 1 -1 1zm1 4.55a1 1 0 0 1 -1 1h-10a1 1 0 0 1 0-2h10a1 1 0 0 1 1 1z"/></g></svg>
                         </a>
                     </li>
 
                     <li>
-                        <a href="#" class="mfb-component__button--child">
-                            <i class="fa fa-twitter"></i>
+
+                        <a href="
+                        https://mail.google.com/mail/?view=cm&fs=1&to=linhnt@visi.com.vn&su=subject_here&body=body_here" target="_blank " class="mfb-component__button--child ">
+                            <svg fill="#0577a3 " id="Layer_1 " enable-background="new 0 0 512 512 " viewBox="0 0 512 512 " xmlns="http://www.w3.org/2000/svg "><path d="m298.789 313.693c-12.738 8.492-27.534 12.981-42.789 12.981-15.254 0-30.05-4.489-42.788-12.981l-209.803-139.873c-1.164-.776-2.298-1.585-3.409-2.417v229.197c0
+                            26.278 21.325 47.133 47.133 47.133h417.733c26.278 0 47.133-21.325 47.133-47.133v-229.198c-1.113.834-2.249 1.645-3.416 2.422z "/><path d="m20.05 148.858 209.803 139.874c7.942 5.295 17.044 7.942 26.146 7.942 9.103 0 18.206-2.648
+                            26.148-7.942l209.803-139.874c12.555-8.365 20.05-22.365 20.05-37.475 0-25.981-21.137-47.117-47.117-47.117h-417.766c-25.98.001-47.117 21.137-47.117 47.142 0 15.085 7.496 29.085 20.05 37.45z "/></svg>
                         </a>
                     </li>
                 </ul>
@@ -1359,10 +1363,10 @@
         </ul>
     </div>
     <!-- The Modal -->
-    <div id="myModal" class="modal close-full">
+    <div id="myModal " class="modal close-full ">
         <!-- Modal content -->
-        <div class="modal-content">
-            <span class="close close-full">&times;</span>
+        <div class="modal-content ">
+            <span class="close close-full ">&times;</span>
             <p>Some text in the Modal..</p>
         </div>
 
@@ -1424,7 +1428,7 @@
     }
 
     function getElemsByToggleMethod(selector) {
-        return document.querySelectorAll('[' + toggleMethod + '="' + selector + '"]');
+        return document.querySelectorAll('[' + toggleMethod + '=" ' + selector + ' "]');
     }
 
     /**
@@ -1503,13 +1507,13 @@
             var aTop = $('.header-fix').height();
             if ($(this).scrollTop() >= aTop) {
                 $('.header-fix').css({
-                    "opacity": 1,
-                    "visibility": "visible"
+                    "opacity ": 1,
+                    "visibility ": "visible "
                 });
             } else {
                 $('.header-fix').css({
-                    "opacity": 0,
-                    "visibility": "hidden"
+                    "opacity ": 0,
+                    "visibility ": "hidden "
                 });
             }
         });
@@ -1597,8 +1601,8 @@
         // });
     });
 </script>
-<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js "></script>
+<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js "></script>
 <script>
     AOS.init();
 </script>
