--- a/index.html
+++ b/index.html
@@ -225,32 +225,35 @@
                     </li>
                     <li>
                         <a href="">Sản phẩm</a>
+                        <ul class="sub-menu">
+                            <li>
+                                <a href="" target="_blank">Giải pháp thiết kế</a>
+                            </li>
+                            <li>
+                                <a href="" target="_blank">Giải pháp gia công</a>
+                            </li>
+                            <li>
+                                <a href="" target="_blank">Giải pháp mô phỏng 1D</a>
+                            </li>
+                            <li>
+                                <a href="" target="_blank">Giải pháp mô phỏng 3D</a>
+                            </li>
+                            <li>
+                                <a href="" target="_blank">Giải pháp và thiết bị kiểm nghiệm</a>
+                            </li>
+                            <li>
+                                <a href="" target="_blank">Giải pháp nhà máy thông minh</a>
+                            </li>
+                            <li>
+                                <a href="" target="_blank">Giải pháp giáo dục</a>
+                            </li>
+                            <li>
+                                <a href="" target="_blank">Giải pháp mô phỏng dập</a>
+                            </li>
+                        </ul>
                     </li>
                     <li>
                         <a href="">Dịch vụ</a>
-                        <ul class="sub-menu">
-                            <li>
-                                <a href="" target="_blank">Thép xây dựng</a>
-                            </li>
-                            <li>
-                                <a href="" target="_blank">Ống thép</a>
-                            </li>
-                            <li>
-                                <a href="" target="_blank">Tôn mạ màu - mạ kẽm</a>
-                            </li>
-                            <li>
-                                <a href="" target="_blank">Điện máy gia dụng</a>
-                            </li>
-                            <li>
-                                <a href="" target="_blank">Chế tạo kim loại</a>
-                            </li>
-                            <li>
-                                <a href="" target="_blank">Bất động sản</a>
-                            </li>
-                            <li>
-                                <a href="" target="_blank">Nông nghiệp</a>
-                            </li>
-                        </ul>
                     </li>
                     <li>
                         <a href="tintuc.html">Tin tức</a>
